<resources>
    <string name="app_name">My Application</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send">Send</string>
    <string name="prompt">Select a country.</string>
    <string name="order">ORDER</string>
    <string name="type">Type</string>
    <string name="quantity">Quantity</string>
    <string name="price">Price:</string>
    <string-array name="languages">
        <item>English</item>
        <item>Spanish</item>
        <item>Polish</item>
        <item>French</item>
        <item>German</item>
        <item>Swahili</item>
        <item>Nazi</item>
    </string-array>
    <string-array name="drink">
        <item>Coffee</item>
        <item>Tea</item>
        <item>Soda</item>
    </string-array>
</resources>
