<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relative_main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/red"
    android:orientation="vertical">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/message_layout"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical">


        <EditText
            android:id="@+id/edit_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_weight="1"
            android:background="@color/white"
            android:ellipsize="end"
            android:hint="@string/edit_message"
            android:maxLength="30"
            android:maxLines="2"
            android:padding="16dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:onClick="sendMessage"
            android:text="@string/button_send"
            android:textSize="22dp" />
    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/toolbar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/white"
        android:orientation="horizontal">

        <Spinner
            android:id="@+id/langSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:padding="16dp"
            android:prompt="@string/prompt" />

        <SearchView
            android:id="@+id/searchView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />

        <ListView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/grey"
            android:text="thing" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/relative_center_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:layout_margin="16dp"
        android:background="@color/brown"
        android:layout_below="@id/message_layout">

        <LinearLayout
            android:id="@+id/selectionLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/quantityLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="8dp"
                android:background="@color/coffee"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textQuantity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/quantity"
                    android:textSize="25sp" />

                <LinearLayout
                    android:id="@+id/plusMinusLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="horizontal">


                    <Button
                        android:id="@+id/buttonPlus"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:onClick="addQuantity"
                        android:text="+" />

                    <TextView
                        android:id="@+id/textQuantityNumber"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="0"
                        android:textSize="25sp" />

                    <Button
                        android:id="@+id/buttonMinus"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:onClick="removeQuantity"
                        android:text="-" />
                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:id="@+id/typeLayout"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:background="@color/coffee"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textType"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/type"
                    android:textSize="25sp" />

                <Spinner
                    android:id="@+id/typeSpinner"
                    android:textSize="25sp"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                </Spinner>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/priceLayout"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:background="@color/coffee"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textSize="25sp"
                    android:text="@string/price" />

                <TextView
                    android:id="@+id/textPriceNumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="0"
                    android:textSize="25sp" />
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/buttonOrder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/selectionLayout"
            android:onClick="orderDrink"
            android:text="Order" />
    </RelativeLayout>
</RelativeLayout>
